fix: correct Windows cmd start syntax for browser launch